--- a/i/ih/ihi/ihigh.com.html
+++ b/i/ih/ihi/ihigh.com.html
@@ -1,30 +1,44 @@
-<!--The following is the downloaded HTML source of the ihigh.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618065455id_/http%3A//www.ihigh.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ihigh.com privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103120125id_/http%3A//www.ihigh.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="">
-<title>Privacy Policy | iHigh.com | America's High School Network</title>
-<link rel="stylesheet" type="text/css" href="http://storage1.ihigh.com/main.css?national&amp;v6">
+<link rel="icon" href="/favicon.ico">
+<title>Privacy Policy | iHigh.com | America's High School Sports Network</title>
+<link rel="stylesheet" type="text/css" href="http://storage1.ihigh.com/main.css?national&amp;v9">
  
 <script src="http://storage1.ihigh.com/js/main.js?v5"></script>
 <script src="http://storage1.ihigh.com/js/flashembed.js"></script>
-
-			<script>var OA_source = ''; var OA_zones = {'topbanner':39,'rightmid1':40,'rightmid2':41,'bottombar1':48,'bottombar2':57,'preroll1':54,'postroll1':55}</script>
-			<script src="http://ads.ihigh.com/www/delivery/spcjs.php?id=13"></script>
-			<script src="http://storage1.ihigh.com/js/stack1.js"></script>
-			<script src="http://storage1.ihigh.com/js/stackload.js"></script>
-			
-
+<script src="http://storage1.ihigh.com/js/flashbanner.js"></script>
+<!-- these must be on main webserver -->
+<script src="/silverlight/Silverlight.js"></script>
+<script src="/silverlight/SilverlightErrors.js"></script>
 </head>
 <body>
 
+	
+
 <div id="pageholder">
-		<table cellspacing="0" cellpadding="0" width="990" id="top_bar"><tbody><tr><td><a href="findschool.html"><img src="http://storage1.ihigh.com/banner.jpg"></a></td><td><div style="width:728x;white-space:nowrap;height:90px;"><script>OA_show('topbanner');</script></div></td></tr></tbody></table>
+	<table cellspacing="0" cellpadding="0" width="990" id="top_bar"><tbody><tr><td><a href="findschool.html"><img src="http://storage1.ihigh.com/banner.jpg"></a></td><td><div style="width:728px;white-space:nowrap;height:90px;"><iframe src="http://ads.ihigh.com/www/delivery/afr.php?zoneid=39&amp;refresh=180&amp;cb=0.08747000 1257249792" framespacing="0" frameborder="no" scrolling="no" allowtransparency="true" width="728" height="90"></iframe></div></td></tr></tbody></table>
 	<table id="content">
 		<tbody><tr>
 			<td colspan="3" class="linkbar">
-				<img src="http://storage1.ihigh.com/national/left-button.png" align="absmiddle"><a href="http://www.ihigh.com">NATIONAL</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="states.html">STATES</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="findschool.html">FIND A SCHOOL</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="login.html">LOGIN</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="register.html">REGISTER</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="forum.html?forumid=1">HELP FORUMS</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a style="color:orange;" href="http://ibn.ihigh.com">LIVE BROADCASTS</a>
+				<span valign="middle">
+					<img src="http://storage1.ihigh.com/national/left-button.png" align="absmiddle">
+					<a href="http://www.ihigh.com">NATIONAL</a>
+					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+										<a href="states.html">STATES</a>
+					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+					<a href="findschool.html">FIND A SCHOOL</a>
+					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+					<a href="login.html">LOGIN</a><img src="http://storage1.ihigh.com/separator.gif" align="absmiddle"><a href="register.html">REGISTER</a>					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+					<a href="forum.html?forumid=1">HELP</a>
+					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+					<a href="http://www.myihigh.com">MY IHIGH</a>
+					<img src="http://storage1.ihigh.com/separator.gif" align="absmiddle">
+					<a style="color:orange;" href="broadcasts.html">LIVE BROADCASTS</a>
+				</span>
 			</td>
 		</tr>
 		<tr>
@@ -34,21 +48,30 @@
 				<h2>CONTENTS</h2>
 				<a href="index.html"><h3>News / Home</h3></a>
 				<a href="section_73.html"><h3>General News</h3></a>
+				<a href="trafficbomb.html?bombdate=2009-10-28"><h3>Traffic Contest!</h3></a>
 
 				<h2>SPORTS</h2><a href="section_2.html"><h3>Baseball</h3></a><a href="section_3.html"><h3>Boys' Basketball</h3></a><a href="section_44.html"><h3>Girls' Basketball</h3></a><a href="section_20.html"><h3>Cross Country</h3></a><a href="section_1.html"><h3>Football</h3></a><a href="section_6.html"><h3>Boys' Golf</h3></a><a href="section_49.html"><h3>Girls' Golf</h3></a><a href="section_11.html"><h3>Boys' Soccer</h3></a><a href="section_48.html"><h3>Girls' Soccer</h3></a><a href="section_43.html"><h3>Girls' Softball</h3></a><a href="section_7.html"><h3>Boys' Tennis</h3></a><a href="section_51.html"><h3>Girls' Tennis</h3></a><a href="section_13.html"><h3>Track &amp; Field</h3></a><a href="section_45.html"><h3>Girls' Volleyball</h3></a><a href="section_10.html"><h3>Wrestling</h3></a><a href="allsections.html" style="color:orange;"><h3>MORE SPORTS...</h3></a><h2>OTHER</h2><a href="section_30.html"><h3>Marching Band</h3></a><a href="section_21.html"><h3>Cheerleading</h3></a><a href="allsections.html" style="color:orange;"><h3>MORE ACTIVITIES...</h3></a>	
 
 				 
-
-				<h2>Featured Sites</h2>
-				<a href="http://aaron.ihigh.com/bigwindup/" target="_blank"><h3 style="color:orange;">• Big Windup</h3></a>
-				<a href="http://www.sealfitnesschallenge.com"><h3 style="color:orange;">• Navy SEAL Fitness Challenge</h3></a>
-				<a href="http://www.ihigh.com/extra.html?function=collegeplanning"><h3 style="color:orange;">• College Planning</h3></a>
-				<a href="http://www.cheer4gear.com"><h3 style="color:orange;">• Cheer 4 Gear</h3></a>
-				<a href="http://www.cheer4gear.com/2"><h3 style="color:orange;">• Show Me Scholarship</h3></a>
-				<a href="http://road2rupp.ihigh.com"><h3 style="color:orange;">• Sweet 16 / Road to Rupp</h3></a>
-				<a href="http://greatamericanrivalries.ihigh.com"><h3 style="color:orange;">• Great American Rivalry Series</h3></a>
-				<a href="http://www.facebook.com/pages/edit/?id=16283694398#/pages/iHighcom/16283694398"><img src="http://storage1.ihigh.com/facebook.gif"></a>
-			</td>
+                                <h2>MEDIA</h2>
+                                <a href="broadcasts.html?status=upcoming"><h3>Live Broadcasts</h3></a>
+                                <a href="broadcasts.html?status=completed"><h3>Archived Broadcasts</h3></a>
+                                <a href="videobrowse.html"><h3>Video Clips</h3></a>
+                                <a href="photobrowse.html"><h3>Photo Galleries</h3></a>
+				<h2>FEATURED SITES</h2>
+				<a target="_new" href="http://www.ihigh.com/greatamericanrivalries/"><h3 style="color:orange;">• Great American Rivalry Series</h3></a>
+				<a target="_new" href="http://www.myteambook.net"><h3 style="color:orange;">• MyTeamBook</h3></a>
+				<a target="_new" href="http://www.coachesnetwork.com"><h3 style="color:orange;">• CoachesNetwork</h3></a>
+				<a target="_new" href="http://www.sealfitnesschallenge.com"><h3 style="color:orange;">• Navy SEAL Fitness Challenge</h3></a>
+				<a target="_new" href="http://www.ihigh.com/road2rupp/"><h3 style="color:orange;">• Sweet 16 / Road to Rupp</h3></a>
+				<a target="_new" href="http://www.ihigh.com/extra.html?function=collegeplanning"><h3 style="color:orange;">• College Planning</h3></a>
+				<a target="_new" href="http://aaron.ihigh.com/pixability/index.html"><h3 style="color:orange;">• Pixability</h3></a>
+				<p>
+				<a target="_new" href="http://www.facebook.com/pages/edit/?id=16283694398#/pages/iHighcom/16283694398"><img src="http://storage1.ihigh.com/facebook.gif"></a>
+				</p><p>&nbsp;</p><p>
+				<!-- For October: Breast Cancer Awareness Month-->
+				&nbsp;&nbsp;&nbsp;<a href="http://www.ihigh.com/search.html?search=breast+cancer"><img align="center" src="http://storage1.ihigh.com/national/pink-ribbon.png"></a>
+			</p></td>
 
 		
 			<td id="mid_column" colspan="2" style="width:849px;">
@@ -61,20 +84,27 @@
 	<a href="terms.html">Terms of Service</a> • 
 	<a href="privacy.html">Privacy Policy</a> • 
 	<a href="advertise.html">iHigh Advertising</a> • 
-	<a href="marketing.html">iHigh Marketing</a>
-	<br>Copyright 2009 iHigh.com, Inc.
+	<a href="marketing.html">iHigh Marketing</a> •
+	<a href="careers.html">Careers</a>
+	<a rel="nofollow" href="index.html?skin=new">Z</a>
+	<br>Copyright 2009 iHigh.com, Inc. - America's High School Sports Network 
 </td>		</tr>
-	</tbody></table>		<table style="color:white;margin-bottom:1em;" align="center">
+	</tbody></table>
+
+		<table style="color:white;margin-bottom:1em;" align="center">
 		<tbody><tr>
 			<td>iHigh is an official partner of the following:</td>
-			<td><script>OA_show('bottombar1');</script></td>
-			<td><script>OA_show('bottombar2');</script></td>
+			<td>
+				<a href="http://ads.ihigh.com/www/delivery/ck.php?bannerid=124&amp;n=ae396de6&amp;cb=0.08968800 1257249792" target="_blank"><img src="http://ads.ihigh.com/www/delivery/avw.php?bannerid=124&amp;cb=0.08969800 1257249792&amp;n=ae396de6" border="0" alt=""></a>
+				<a href="http://ads.ihigh.com/www/delivery/ck.php?bannerid=187&amp;n=ae396de6&amp;cb=0.08970700 1257249792" target="_blank"><img src="http://ads.ihigh.com/www/delivery/avw.php?bannerid=187&amp;cb=0.08971200 1257249792&amp;n=ae396de6" border="0" alt=""></a>
+			</td>
 		</tr>
 	</tbody></table>
 		</div>
 
 
 
+<!--Google Snippet-->
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -84,6 +114,14 @@
 	pageTracker._setDomainName(".ihigh.com");
 	pageTracker._trackPageview();
 </script>
+
+<!--Visistat Snippet-->
+<script type="text/javascript">
+var DID=66877;
+var pcheck=(window.location.protocol == "https:") ? "https://sniff.visistat.com/live.js":"http://stats.visistat.com/live.js";
+document.writeln('<scr'+'ipt src="'+pcheck+'" type="text\/javascript"><\/scr'+'ipt>');
+</script><script src="https://sniff.visistat.com/live.js" type="text/javascript"></script>
+
 
 
 
