--- a/s/sc/scr/scripps.edu.html
+++ b/s/sc/scr/scripps.edu.html
@@ -1,14 +1,15 @@
-<!--The following is the downloaded HTML source of the scripps.edu privacy policy that was archived on 2009-04-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090430012600id_/http%3A//www.scripps.edu/philanthropy/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scripps.edu privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103120653id_/http%3A//www.scripps.edu/philanthropy/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="robots" content="index,follow">
-	<meta name="description" content="Meta website description goes here">
-	<meta name="keywords" content="Meta keywords, go here, separated by, commas">
+	<meta name="description" content="The Scripps Research Institute">
+	<meta name="keywords" content="">
     <title>The Scripps Research Institute - Privacy Policy</title>
 	<link rel="stylesheet" href="/css/master.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/css/master.css" type="text/css" media="print">
+	<link rel="stylesheet" href="/css/nav_charity.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
 	<style type="text/css" media="screen">
 		</style>
 		<!--[if lt IE 7]>
@@ -41,13 +42,13 @@
 	<div id="masthead">
 		<p id="logo"><a href="/">The Scripps Research Institute</a></p>
 		
-		<p id="tagline" style="background: url('/css/i/masthead_inner03.jpg');"><span>Privacy Policy</span></p><p id="tagline"><span>Privacy Policy</span></p>	</div> <!-- /masthead -->
+		<p id="tagline" style="background: url('/css/i/masthead_inner02.jpg');"><span>Privacy Policy</span></p><p id="tagline"><span>Privacy Policy</span></p>	</div> 
+	<!-- /masthead -->
 
 	<div id="content">
 		<div id="main">
 
-<ul id="crumb"> <!-- breadcrumbs --><li><a href="/">Home</a></li><li class="last"><a href="/philanthropy/">Giving to TSRI</a></li>
-</ul> <!-- END breadcrumbs --><h1>Privacy Policy</h1><div id="text">
+<ul id="crumb"> <!-- breadcrumbs --><li><a href="/">Home</a></li><li class="last"><a href="/philanthropy">Giving to TSRI</a></li></ul> <!-- END breadcrumbs --><h1>Privacy Policy</h1><div id="text">
 <h3>The Scripps Research Institute Privacy Statement</h3>
 <p>Your privacy is important to us, so we operate the site by the following principles:</p>
 
@@ -89,198 +90,23 @@ When you make a gift on our site, your e-mail will be entered into our donor dat
 				</ul>
 					</div> <!-- END sidebar -->
 			<div id="nav">
-			<ul><li><a href="/">Home</a></li>
-<li><a href="/intro/">About TSRI</a><ul><li><a href="/intro/glance/">Watch DVD</a></li>
-<li><a href="/intro/overview.html">Overview</a></li>
-<li><a href="/intro/history.html">History</a></li>
-<li><a href="/intro/trustees.html">Board of Trustees</a></li>
-<li><a href="/intro/governors.html">Board of Scientific Governors</a></li>
-<li><a href="/intro/admin.html">Administration</a></li>
-<li><a href="/intro/achievements.html">Major Scientific Achievements</a></li>
-<li><a href="/intro/facts.html">Facts-at-a-Glance</a><ul><li><a href="/intro/facts.html#faculty">Faculty</a></li>
-<li><a href="/intro/facts.html#employees">Employees</a></li>
-<li><a href="/intro/facts.html#edprograms">Educational Programs</a></li>
-<li><a href="/intro/facts.html#facilities">Campus Facilities</a></li>
-<li><a href="/intro/facts.html#finance">Finance</a></li>
-</ul></li>
-<li><a href="http://www.scripps.edu/phd/usnewsranking/">U.S. News &amp; World Report Rankings of Top Grad Schools</a></li>
-<li><a href="/intro/accreditation.html">WASC Accreditation of TSRI</a></li>
-<li><a href="/community/">Scripps Research in the Community</a></li>
-<li><a href="/philanthropy/tell-friend.html">Tell a Friend About TSRI</a></li>
-<li><a href="/intro/maps.html">Maps and Directions</a><ul><li><a href="/intro/maps.html">Maps of California campus</a></li>
-<li><a href="/intro/flamaps.html">Map of Florida campus</a></li>
-</ul></li>
-</ul></li>
-<li><a href="/research/">Research &amp; Faculty</a><ul><li><a href="/research/#faculty">Faculty</a></li>
-<li><a href="/research/fac_list.php">Alphabetical listing</a></li>
-<li><a href="/research/fac_interests.php">Research Interests</a></li>
-<li><a href="/research/#departments">Scientific Departments</a><ul><li><a href="http://www.scripps.edu/florida/cancerbio/">Cancer Biology</a></li>
-<li><a href="/cb/">Cell Biology</a></li>
-<li><a href="/chem/">Chemistry</a></li>
-<li><a href="/chemphys">Chemical Physiology</a></li>
-<li><a href="/cnad">Committee on the Neurobiology of Addictive Disorders</a></li>
-<li><a href="/genetics">Genetics</a></li>
-<li><a href="/ims">Immunology and Microbial Science</a></li>
-<li><a href="http://www.scripps.edu/florida/infectology">Infectology</a></li>
-<li><a href="/mb">Molecular Biology</a></li>
-<li><a href="/mem">Molecular and Experimental Medicine</a></li>
-<li><a href="/mind">Molecular and Integrative Neurosciences</a></li>
-<li><a href="http://www.scripps.edu/florida/moltherapeutics">Molecular Therapeutics</a></li>
-<li><a href="/nb">Neurobiology</a></li>
-</ul></li>
-<li><a href="/research/#centers">Centers and Programs</a><ul><li><a href="/research/cimbio">Center for Integrative Molecular Biosciences (CIMBio)</a></li>
-<li><a href="/research/crm">Center for Regenerative Medicine</a></li>
-<li><a href="/research/harolddorris">Harold L. Dorris Neurological Research Institute</a></li>
-<li><a href="/research/helendorris">Helen L. Dorris Child and Adolescent Neuro-Psychiatric Disorder Institute</a></li>
-<li><a href="/research/icnd/centerindex.html">Institute for Childhood and Neglected Diseases</a></li>
-<li><a href="/research/nac/">Neutralizing Antibody Center</a></li>
-<li><a href="/research/pearsonctr">Pearson Center for Alcohol and Addiction Research</a></li>
-<li><a href="/research/nsp">Program in Neurosciences</a></li>
-<li><a href="/research/skaggs">The Skaggs Institute for Chemical Biology</a></li>
-<li><a href="/research/wirm">The Worm Institute for Research and Medicine</a></li>
-</ul></li>
-<li><a href="/research/#consortia">Consortia</a><ul><li><a href="http://glycomics.scripps.edu/CFGhome.html">Consortium for Functional Glycomics</a></li>
-<li><a href="/cnad/inia">Integrated Neuroscience Initiative on Alcoholism</a></li>
-<li><a href="http://www.jcsg.org/">Joint Center for Structural Genomics</a></li>
-<li><a href="http://core-eye.scripps.edu">NEI Core Grant for Vision Science</a></li>
-<li><a href="http://bigdaddy.scripps.edu/darlene/snaps/snaps.htm">Scripps NeuroAIDS Preclinical Studies (SNAPS)</a></li>
-<li><a href="/research/iig">Innate Immune Grant (page under construction)</a></li>
-</ul></li>
-</ul></li>
-<li><a href="/news/">News &amp; Publications</a><ul><li><a href="/news/">News</a><ul><li><a href="/news/inthenews.html">Scripps in the News</a></li>
-<li><a href="/news/press">News Releases 2007-2008</a></li>
-<li><a href="/news/press/florida.html">News Releases - Florida</a></li>
-<li><a href="/news/press/archive.html">News Release Archive</a></li>
-</ul></li>
-<li><a href="/news/">Publications</a><ul><li><a href="/newsandviews/">News &amp; Views</a></li>
-<li><a href="/news/endeavor">Endeavor Magazine</a></li>
-<li><a href="/news/sr">Scripps Research Scientific Report</a></li>
-<li><a href="/news/sr/flindex.html">Scripps Florida Scientific Report</a></li>
-<li><a href="/news/sk">Skaggs Institute Scientific Report</a></li>
-<li><a href="/philanthropy/subscribe/">Publications Subscription Service</a></li>
-</ul></li>
-<li><a href="/news/">Information for Journalists</a><ul><li><a href="/news/info.html">Contacts</a></li>
-<li><a href="/news/mediaguide.html">Media Guidelines</a></li>
-<li><a href="/philanthropy/subscribe/">Publications Subscription Service</a></li>
-</ul></li>
-<li><a href="/news">Resources</a><ul><li><a href="/intro/facts.html">Facts-at-a Glance</a></li>
-<li><a href="/news/science.html">Science @ Scripps Research</a></li>
-<li><a href="/news/faculty.html">Faculty/Research Directory</a></li>
-<li><a href="/intro/maps.html">Maps &amp; Directions</a></li>
-</ul></li>
-<li><a href="/calendar">Calendar of Events</a></li>
-</ul></li>
-<li><a href="/calendar/">Scientific Calendars</a><ul><li><a href="/calendar">Scripps Research Calendar of Events</a></li>
-<li><a href="http://www.biotech-calendar.com/sdcal/index.html">San Diego Biotechnology Calendar</a></li>
-<li><a href="http://www.connect.org/press/newsletter.htm">CONNECT Newsletter</a></li>
-<li><a href="http://www.biocom.org/Default.aspx?tabid=85">CBIOCOM/San Diego Community Events Calendar</a></li>
-<li><a href="http://www.salk.edu/events/seminars">The Salk Bulletin</a></li>
-</ul></li>
-<li><a href="http://www.scripps.edu/florida/"> Scripps Florida</a></li>
-<li><a href="http://www.scripps.edu/phd/index_external.html">PhD Program</a></li>
-<li><a href="/services/e_index.html">Campus Services</a><ul><li><a href="/services/e_index.html">Administrative Services</a><ul><li><a href="/services/graphics">BioMedical Graphics</a></li>
-<li><a href="/services/cafeteria">Cafeteria</a></li>
-<li><a href="/calendar">Calendar Office</a></li>
-<li><a href="/services/careers">Career Information &amp; Resources</a></li>
-<li><a href="/services/gluck">Gluck Child Care Center</a></li>
-<li><a href="/services/isso">International Office</a></li>
-<li><a href="/services/nwis">Network for Women in Science</a></li>
-<li><a href="/services/parking">Parking</a></li>
-<li><a href="http://www.scripps.edu/services/postdocs">Postdoctoral Services</a></li>
-<li><a href="/services/security">Security</a></li>
-<li><a href="http://www.scripps.edu/services/sof">Society of Fellows</a></li>
-<li><a href="/services/sports">Sports@Scripps</a></li>
-<li><a href="/rc/webmaster">Webmaster</a></li>
-</ul></li>
-<li><a href="/services/e_index.html">Affinity Groups</a><ul><li><a href="/affinity/cancer_affinity">Cancer</a></li>
-<li><a href="/affinity/cb_affinity">Cell Biology</a></li>
-<li><a href="/affinity/genetics">Genetics</a></li>
-<li><a href="/affinity/imm_affinity">Immunology</a></li>
-<li><a href="/affinity/seminars">Neurosciences</a></li>
-<li><a href="/affinity/pathogenesis">Pathogenesis</a></li>
-<li><a href="/affinity/progress">Research-in-Progress</a></li>
-<li><a href="/affinity/sc_affinity">Structure and Chemistry</a></li>
-<li><a href="/affinity/vbcal">Vascular Biology</a></li>
-</ul></li>
-<li><a href="/services/i_index.html#postdoc">Postdoctoral Resources</a><ul><li><a href="http://www.scripps.edu/services/postdocs">Postdoctoral Services Office</a></li>
-<li><a href="http://www.scripps.edu/services/sof">Society of Fellows</a></li>
-</ul></li>
-<li><a href="/researchservices/rec/">Research Education and Compliance</a></li>
-<li><a href="/researchservices/">Research Services</a><ul><li><a href="/researchservices/abcore">Antibody Production Care</a></li>
-<li><a href="http://darhome.scripps.edu">Animal Resources</a></li>
-<li><a href="/researchservices/massspec">Center for Mass Spectrometry</a></li>
-<li><a href="http://corefac.scripps.edu">Center for Protein and Nucleic Acid Research</a></li>
-<li><a href="http://corefac.scripps.edu/proteinsci">Center for Protein Sciences (under construction)</a></li>
-<li><a href="/researchservices/em">Core Mocroscopy</a></li>
-<li><a href="/researchservices/dna_array/dna_array.html">DNA Array Core</a></li>
-<li><a href="/researchservices/ehs/">Environmental Health &amp; Safety</a></li>
-<li><a href="/researchservices/facs">Flow Cytometry</a></li>
-<li><a href="/researchservices/informaticscore">Informatics Core</a></li>
-<li><a href="/researchservices/iacuc">Institutional Animal Care and Use Committee (IACUC)</a></li>
-<li><a href="/researchservices/instlab">Instrumentation Laboratory</a></li>
-<li><a href="/rc">IT Services</a></li>
-<li><a href="/researchservices/mba">Mouse Behavioral Assessment Core</a></li>
-<li><a href="/researchservices/mgc">Mouse Genetics Core</a></li>
-<li><a href="/researchservices/nbd">Normal Blood Donor Service</a></li>
-<li><a href="/researchservices/chemnmr">NMR Facility</a></li>
-<li><a href="/researchservices/rec">Research Education and Compliance (under contruction)</a></li>
-<li><a href="/researchservices/xray">X-Ray Crystallography</a></li>
-</ul></li>
-<li><a href="/services/e_index.html">Training Programs</a><ul><li><a href="/ims/curtiss/training">Immunology and Vascular Biology Training Program</a></li>
-<li><a href="/phd/biograd/intertrainpro.html">Interdisciplinary Training Program in Immunology</a></li>
-<li><a href="http://ljis.ucsd.edu">La Jolla Interfaces in Sciences</a></li>
-<li><a href="/ims/training">NIH Postdoctoral Training Grant in Imminology</a></li>
-</ul></li>
-</ul></li>
-<li><a href="/hr/">Working at TSRI</a><ul><li><a href="/hr/diversity/">Diversity</a></li>
-<li><a href="/hr/ebenefits.html">Benefits</a></li>
-<li><a href="https://careers.scripps.edu">Careers at Scripps</a></li>
-<li><a href="/hr/e_contacts.html">Contact HR</a></li>
-</ul></li>
-<li><a href="/community/index.html">TSRI in the Community</a><ul><li><a href="/community/">Regional Programs</a><ul><li><a href="/community/">California</a></li>
-<li><a href="http://www.scripps.edu/florida/edprograms/">Florida</a></li>
-</ul></li>
-<li><a href="/community/core/">National Programs</a></li>
-</ul></li>
-<li><a href="/philanthropy/">Giving to TSRI</a><ul><li><a href="/philanthropy/donate/">Donate Now</a><ul><li><a href="/philanthropy/donate/online.html">Donate Online</a></li>
-<li><a href="/philanthropy/donate/monthly.html">Monthly Giving</a></li>
-<li><a href="/philanthropy/donate/major.html">Major Gifts</a></li>
-</ul></li>
-<li><a href="/tribute/">Scripps Tributes</a></li>
-<li><a href="/philanthropy/giftofstock.html">Gift of Stock</a></li>
-<li><a href="/philanthropy/major-giving.html">Major Giving</a><ul><li><a href="/philanthropy/1000-friends.html">1,000 Friends of Science</a></li>
-<li><a href="/philanthropy/unrestricted.html">Unrestricted Giving</a></li>
-<li><a href="/philanthropy/naming.html">Naming Opportunities</a></li>
-<li><a href="/philanthropy/scholarships.html">Endowed Scholarships and Fellowships</a></li>
-<li><a href="/philanthropy/matching.html">Matching Gift Program</a></li>
-</ul></li>
-<li><a href="/philanthropy/legacy.html">Planned Giving</a><ul><li><a href="/philanthropy/bequests.html">Bequests</a></li>
-<li><a href="/philanthropy/annuity.html">Charitable Gift Annuity</a></li>
-<li><a href="/philanthropy/remainder.html">Charitable Remainder Trust</a></li>
-<li><a href="/philanthropy/lead.html">Charitable Lead Trust</a></li>
-<li><a href="/philanthropy/retirement.html">Gifts of Retirement Plan</a></li>
-<li><a href="/philanthropy/life-insurance.html">Gifts of Life Insurance</a></li>
-<li><a href="/philanthropy/personal-property.html">Gifts of Personal Property</a></li>
-<li><a href="/philanthropy/real-estate.html">Donating Real Estate</a></li>
-<li><a href="/philanthropy/retained.html">Gifts of Residence with Life Estate Retained</a></li>
-</ul></li>
-<li><a href="/philanthropy/action.html">Scripps in Action</a><ul><li><a href="/philanthropy/diseases.html">Diseases and Research Centers</a></li>
-<li><a href="/philanthropy/about.html">About Scripps Research</a></li>
-<li><a href="/philanthropy/community.html">In the Community</a></li>
-<li><a href="/philanthropy/donor-stories.html">Donor Stories</a></li>
-<li><a href="/philanthropy/scientist-profiles.html">Scientist Profiles</a></li>
-<li><a href="/philanthropy/scripps-discovers.html">Scripps "Discovers"</a></li>
-<li><a href="/philanthropy/forefront.html">"At the Forefront"</a></li>
-<li><a href="/philanthropy/banner.html">Scripps Research Website Banners</a></li>
-</ul></li>
+			<ul><li><a href="/">TSRI Home</a></li>
+<li><a href="/philanthropy">Giving to TSRI</a></li>
+<li><a href="/philanthropy/about.html">About Us</a></li>
+<li><a href="/philanthropy/diseases.html">Research Areas</a></li>
 <li><a href="/philanthropy/accountability.html">Accountability</a></li>
-</ul></li>
-<li><a href="/directory/external/">Directory</a></li>
-<li><a href="/library/e_index.html">Library</a></li>
-<li><a href="/contact.phtml">Contact</a></li>
-<li><a href="/e_sitemap.html">Site Map &amp; Search</a><ul><li><a href="/e_sitemap.html">Index/Sitemap</a></li>
-<li><a href="/e_search.html">Search</a></li>
-</ul></li>
+<li><a href="/philanthropy/action.html">Scripps in Action</a></li>
+<li><a href=""></a></li>
+<li><a href="/philanthropy/donate">Donate</a></li>
+<li><a href="/tribute">Tribute</a></li>
+<li><a href="/philanthropy/donate/monthly.html">Monthly Giving</a></li>
+<li><a href="/philanthropy/giftofstock.html">Gifts of Stock</a></li>
+<li><a href="/philanthropy/major-giving.html">Major Giving</a></li>
+<li><a href="/philanthropy/legacy.html">Planned Giving</a></li>
+<li><a href=""></a></li>
+<li><a href="/philanthropy/events.html">Events</a></li>
+<li><a href="/philanthropy/subscribe">Email Signup</a></li>
+<li><a href="/philanthropy/philanthropy-staff.html">Contact Us</a></li>
 </ul>
 			<p><a href="http://www.charitynavigator.org/index.cfm?bay=search.summary&amp;orgid=4445" title="Charity Navigator">A 4-star charity</a></p>
 		</div> <!-- /nav -->
@@ -301,7 +127,7 @@ When you make a gift on our site, your e-mail will be entered into our donor dat
 			<p style="color:#fff">Florida: 130 Scripps Way 4B2 - Jupiter FL 33458 - 561.228.2015</p>
 		</div>
 
-		<div class="tel"><span class="type">General</span> <span class="value">858.784.1000</span> — <span class="type">Philanthropy</span> <span class="value">800.788.4931<br><a href="mailto:philanthropy@scripps.edu" style="color:#FFFFFF">philanthropy@scripps.edu</a></span></div>
+		<span class="type">Philanthropy</span> <span class="value">800.788.4931 <a href="mailto:philanthropy@scripps.edu" style="color:#FFFFFF">philanthropy@scripps.edu</a></span>
 	</div>
 
 </div> <!-- end footer -->
